syntax = "proto3";

package Kahuna.Persistence.Protos;

message RocksDbLockMessage {
  string resource = 1;
  string owner = 2;
  int64 expiresPhysical = 3;
  uint32 expiresCounter = 4;
  int64 fencingToken = 5;
  int32 consistency = 6;
  int32 state = 7;
}

message RocksDbKeyValueMessage {
  string key = 1;
  string value = 2;
  int64 expiresPhysical = 3;
  uint32 expiresCounter = 4;
  int32 consistency = 5;
  int32 state = 6;
}